implement onboard and change pb.RemoteConfiguration to similar as in hub
