# service/grpc/updateIdentityCertificate.go
@@ -21,7 +21,6 @@ import (
 
 	"github.com/google/uuid"
 	"github.com/plgd-dev/client-application/pb"
-	"github.com/plgd-dev/client-application/service/config/remoteProvisioning"
 	"github.com/plgd-dev/device/v2/pkg/net/coap"
 	"github.com/plgd-dev/hub/v2/identity-store/events"
 	"github.com/plgd-dev/hub/v2/pkg/net/grpc"
@@ -40,7 +39,7 @@ func (s *ClientApplicationServer) validateState(state uuid.UUID) bool {
 }
 
 func (s *ClientApplicationServer) signIdentityCertificateRemotely() bool {
-	return s.GetConfig().RemoteProvisioning.Mode == remoteProvisioning.Mode_UserAgent && s.serviceDevice.GetDeviceAuthenticationMode() == pb.GetConfigurationResponse_X509
+	return s.GetConfig().RemoteProvisioning.GetMode() == pb.RemoteProvisioning_USER_AGENT && s.serviceDevice.GetDeviceAuthenticationMode() == pb.GetConfigurationResponse_X509
 }
 
 func (s *ClientApplicationServer) updateIdentityCertificate(ctx context.Context, req *pb.FinishInitializeRequest) error {
@@ -54,7 +53,7 @@ func (s *ClientApplicationServer) updateIdentityCertificate(ctx context.Context,
 	if !s.validateState(state) {
 		return status.Errorf(codes.InvalidArgument, "invalid state")
 	}
-	owner, err := grpc.OwnerFromTokenMD(ctx, s.GetConfig().RemoteProvisioning.Authorization.OwnerClaim)
+	owner, err := grpc.OwnerFromTokenMD(ctx, s.GetConfig().RemoteProvisioning.GetJwtOwnerClaim())
 	if err != nil {
 		return status.Errorf(codes.Unauthenticated, "cannot get owner from token: %v", err)
 	}
